tests/invalid/undeclared_var.f77
PROGRAM ERROVAR
INTEGER X
Y = X + 1
END
